[package]
name = "nfse-bh-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
curl = "0.4.44"
quick-xml = { version = "0.29.0", features = ["serialize"] }
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["pem", "sha1"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.23"
sha1 = "0.10.5"
xml = "0.8.10"
